fix(LPs): improve authors section plural and spacing

--- a/src/components/Course/CourseDetails/Tabs/MainDetails/DetailSection/AuthorsDetails/AuthorsDetails.module.scss
+++ b/src/components/Course/CourseDetails/Tabs/MainDetails/DetailSection/AuthorsDetails/AuthorsDetails.module.scss
@@ -1,3 +1,12 @@
+.list {
+  padding-inline-start: var(--spacing-medium);
+  list-style: disc;
+}
+
+.list > li + li {
+  margin-block-start: var(--spacing-xsmall);
+}
+
 .author {
   font-weight: var(--font-weight-bold);
 }
